Bug 275290 - Auto shape square boxes are not displaying in the attached doc file
Summary: Auto shape square boxes are not displaying in the attached doc file
Status: VERIFIED FIXED
Alias: None
Product: calligrawords
Classification: Applications
Component: doc (other bugs)
Version First Reported In: unspecified
Platform: Unlisted Binaries Linux
: NOR normal
Target Milestone: ---
Assignee: Matus Uzak
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2011-06-09 16:11 UTC by swathi
Modified: 2011-07-13 12:03 UTC (History)
1 user (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments
Screenshot in MS Office (145.99 KB, image/x-png)
2011-06-09 16:11 UTC, swathi
Details
Screenshot in Calligra Words (143.62 KB, image/x-png)
2011-06-09 16:12 UTC, swathi
Details

Note You need to log in before you can comment on or make changes to this bug.
Description swathi 2011-06-09 16:11:41 UTC
Created attachment 60832 [details]
Screenshot in MS Office

Version: git checkout 8288143b7c1f9f9005209b55b651875219b0e9d6
        (Using KDE 4.5.5)                
     OS: Kubuntu 10.10
Test data is in word 2003 format .
Open the same document in Calligra Words.
Expected outcome:
In the 1st page, below the text “FULL NAME (IN CAPITAL LETTERS)” auto shapes square boxes should be displayed.

Actual outcome:
Squarboxes are missing.
Please check the screenshots attached.
Frequency:
Always.
Comment 1 swathi 2011-06-09 16:12:23 UTC
Created attachment 60833 [details]
Screenshot in Calligra Words
Comment 2 swathi 2011-06-09 16:13:26 UTC
Link to the test data:http://delhihighcourt.nic.in/rec04042008.doc
Comment 3 Matus Uzak 2011-07-04 14:40:22 UTC
Git commit 3868b82a35d5406fbbec79152887d9d1bd72d53a by Matus Uzak.
Committed on 04/07/2011 at 16:32.
Pushed by uzak into branch 'master'.

libmso: Use reserve achor in case OfficeArtClientAnchor is missing.

* Sometimes OfficeArtClientAnchor, which provides some client specific data to obtain
  shape dimensions and position is missing.  Each client should decide what to do
  in this case.  For MS-DOC client, the data can be accessed based on the character
  position (CP) in the document.  I could not reproduce the problem after re-save in
  MS Office 2000/2003/2007.  The test files attached to Bug 275290 is a well known broken file.
  I left an assert to obtain test data for inline shapes with missing OfficeArtClientAnchor.

BUG:275290

M  +6    -0    filters/kpresenter/powerpoint/PptToOdp.cpp     
M  +10   -2    filters/libmso/ODrawToOdf.h     
M  +4    -1    filters/libmso/shapes.cpp     
M  +6    -0    filters/tables/excel/import/ODrawClient.cpp     
M  +1    -0    filters/tables/excel/import/ODrawClient.h     
M  +15   -2    filters/words/msword-odf/drawclient.cpp     
M  +14   -2    filters/words/msword-odf/graphicshandler.cpp     
M  +4    -6    filters/words/msword-odf/graphicshandler.h     

http://commits.kde.org/calligra/3868b82a35d5406fbbec79152887d9d1bd72d53a
Comment 4 swathi 2011-07-13 12:03:46 UTC
Verified in 0a3741ba8dceae49bab1944cae45367fb8e87dce.