libmso: Use reserve achor in case OfficeArtClientAnchor is missing.

* Sometimes OfficeArtClientAnchor, which provides some client specific data to obtain
  shape dimensions and position is missing.  Each client should decide what to do
  in this case.  For MS-DOC client, the data can be accessed based on the character
  position (CP) in the document.  I could not reproduce the problem after re-save in
  MS Office 2000/2003/2007.  The test files attached to Bug 275290 is a well known broken file.
  I left an assert to obtain test data for inline shapes with missing OfficeArtClientAnchor.

BUG:275290